# futures-buffered

./: Cargo.toml  README.md
.github/workflows/: miri.yaml  test.yaml
benches/: batch.rs
src/: arc_slice.rs  atomic_sparse.rs  atomic_waker.rs  buffered.rs  buffered_unordered.rs  futures_ordered_bounded.rs  futures_unordered.rs  futures_unordered_bounded.rs  iter_ext.rs  join_all.rs  lib.rs  merge.rs  merge_bounded.rs  merge_unbounded.rs  slot_map.rs  sparse.rs  try_buffered.rs  try_join_all.rs  waker_list.rs
src/buffered/: ordered.rs  unordered.rs
src/triomphe/: arc.rs  arc_borrow.rs  arc_union.rs  header.rs  mod.rs  thin_arc.rs  thin_arc_list.rs  unique_arc.rs
tests/: alloc.rs  http.rs
