[package]
name = "futures-buffered"
version = "0.2.4"
edition = "2021"
description = "future concurrency primitives with emphasis on performance and low memory usage"
license = "MIT"
repository = "https://github.com/conradludgate/futures-buffered"
authors = ["Conrad Ludgate <conradludgate@gmail.com"]
categories = ["asynchronous"]

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.21"
futures-util = "0.3.21"
pin-project-lite = "0.2"

[dev-dependencies]
futures = "0.3.21"
futures-test = "0.3.21"

hyper = { version = "1", features = ["client", "http2"] }
tokio = { version = "1", features = ["full", "macros"] }
reqwest = "0.12.4"

divan = "0.1.11"

[[bench]]
name = "batch"
harness = false
