[package]
name = "futures-buffered"
version = "0.2.11"
edition = "2021"
description = "future concurrency primitives with emphasis on performance and low memory usage"
license = "MIT"
repository = "https://github.com/conradludgate/futures-buffered"
authors = ["Conrad Ludgate <conradludgate@gmail.com"]
categories = ["asynchronous"]
rust-version = "1.75.0"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = { version = "0.3.21", default-features = false }
pin-project-lite = "0.2"
diatomic-waker = "0.2.0"
cordyceps = "0.3.2"
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }
triomphe = { version = "0.1.15", git = "https://github.com/conradludgate/triomphe", branch = "conrad/add-thin-arc-list" }

[dev-dependencies]
futures = "0.3.31"
futures-test = "0.3.31"

hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
tokio = { version = "1", features = ["full", "macros", "test-util"] }
reqwest = "0.12.4"
rand = "0.9.0"

divan = "0.1.14"

[[bench]]
name = "batch"
harness = false
